# haveibeenpwned

./: Cargo.toml  README.md  sqlite.db-shm  sqlite.db-wal
migrations/: 20231205150058_fishy_website_com.sql
src/: db.rs  main.rs  migrate.rs  sqlite.db-shm  sqlite.db-wal  web.rs
templates/: accept_form_pawned.html  accept_form_secure.html  base.html  form.html
