[package]
name = "haveibeenpwned-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.34", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
askama = {version="0.12.1"}

# [[bin]]
# name = "haveibeenpwned-v2"
# path = "src/main.rs"
#
# [[bin]]
# name = "migrate"
# path = "src/bin/migrate.rs"
